--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,11 @@
     box-sizing: border-box;
 }
 
+html, body {
+    height: 100%;
+    min-height: 100vh;
+  }
+
 body {
     background-color: var(--darkest-red);
     color: var(--brightest-red);
@@ -59,7 +64,7 @@ nav ul li a {
 }
 
 main {
-    flex-grow: 1;
+    flex: 1 0 auto;
 }
 
 .card-img-top {
@@ -78,10 +83,10 @@ main {
 footer {
     background-color: var(--darkest-red);
     color: var(--brightest-red);
-    position: absolute;
     bottom: 0;
     width: 100%;
     height: 60px; /* Set the fixed height of the footer here */
     line-height: 60px; /* Vertically center the text there */
     text-align: center;
+    flex-shrink: 0;
 }
